fixed spacing to rem, corrected variables

--- a/src/components/sass/Variables.scss
+++ b/src/components/sass/Variables.scss
@@ -11,11 +11,12 @@
 
 /////***** Spacing *****\\\\\
 
+/////***** Widths ******\\\\\\
 
 /////***** Color ***** \\\\\
 
 /////Color Theme\\\\\
-$color-Primary: hsl(20, 100%, 50%);
+$color-Primary: hsl(10, 100%, 50%);
 $color-Accent: hsl(10, 100%, 50%);
 $color-White: hsl(0, 0%, 100%);
 $color-Black: hsl(0, 0%, 0%);
@@ -25,15 +26,15 @@ $color-Error: hsl(359, 98%, 45%);
 
 /////Color Theme - Tones\\\\\
 
-$color-Primary-100: hsl(20, 100%, 70%);
-$color-Primary-200: hsl(20, 100%, 65%);
-$color-Primary-300: hsl(20, 100%, 60%);
-$color-Primary-400: hsl(20, 100%, 55%);
-$color-Primary-500: hsl(20, 100%, 50%);
-$color-Primary-600: hsl(20, 100%, 45%);
-$color-Primary-700: hsl(20, 100%, 40%);
-$color-Primary-800: hsl(20, 100%, 35%);
-$color-Primary-900: hsl(20, 100%, 30%);
+$color-Primary-100: hsl(10, 100%, 70%);
+$color-Primary-200: hsl(10, 100%, 65%);
+$color-Primary-300: hsl(10, 100%, 60%);
+$color-Primary-400: hsl(10, 100%, 55%);
+$color-Primary-500: hsl(10, 100%, 50%);
+$color-Primary-600: hsl(10, 100%, 45%);
+$color-Primary-700: hsl(10, 100%, 40%);
+$color-Primary-800: hsl(10, 100%, 35%);
+$color-Primary-900: hsl(10, 100%, 30%);
 
 $color-Accent-100: hsl(10, 100%, 70%);
 $color-Accent-200: hsl(10, 100%, 65%);
@@ -96,7 +97,7 @@ $fs-16: 1.6em;
 $fs-18: 1.8em;
 $fs-20: 2em;
 $fs-24: 2.4em;
-$fs-28: 8.8em;
+$fs-28: 2.8em;
 $fs-32: 3.2em;
 $fs-36: 3.6em;
 
@@ -110,33 +111,43 @@ $fw-Black: 700;
 
 /////***** Spacing *****\\\\\
 
-$spacing: 5em;
+$spacing-xl: 10rem;
+$spacing: 5rem;
+$spacing-sm: 2.5rem;
 
-$border-Radius: 5px;
 
-$y-translation-start: -10px;
-$y-translation-max: 10px;
+//golden ratio = 100%, 62%, 38%, 23%, 14%, 9%, 6%, 4%, 2%, 1%, 0%
+
+/////***** Widths ******\\\\\\
+$max-phone-width: 86%;
+$max-tablet-portrait-width: 86%;
+$max-tablet-landscape-width: 62%;
+$max-desktop-width: 62%;
+$max-big-desktop-width: 62%;
+$width-portrait: 86%;
+$width-landscape: 62%;
+
 
 // X Y spread/size blur color-opacity
 $box-shadow-1:
 5px 2px 1px 2px hsla(0, 0%, 0%, 0.1),
-6px 6px 5px 2px rgba(0, 0, 0, 0.15),
-7px 10px 8px 2px rgba(0, 0, 0, 0.16),
-8px 15px 13px 2px rgba(0, 0, 0, 0.17),
-9px 30px 25px 2px rgba(0, 0, 0, 0.18),
-10px 50px 40px 2px rgba(0, 0, 0, 0.22);
+6px 6px 5px 2px hsla(0, 0%, 0%, 0.15),
+7px 10px 8px 2px hsla(0, 0%, 0%, 0.16),
+8px 15px 13px 2px hsla(0, 0%, 0%, 0.17),
+9px 30px 25px 2px hsla(0, 0%, 0%, 0.18),
+10px 50px 40px 2px hsla(0, 0%, 0%, 0.22);
 
 $box-shadow-2:
 10px 2px 1px 2px hsla(10, 0%, 0%, 0.1),
-12px 6px 5px 2px rgba(0, 0, 0, 0.15),
-14px 10px 8px 2px rgba(0, 0, 0, 0.16),
-16px 15px 13px 2px rgba(0, 0, 0, 0.17),
-18px 30px 25px 2px rgba(0, 0, 0, 0.18),
-20px 50px 40px 2px rgba(0, 0, 0, 0.22);
+12px 6px 5px 2px hsla(0, 0%, 0%, 0.15),
+14px 10px 8px 2px hsla(0, 0%, 0%, 0.16),
+16px 15px 13px 2px hsla(0, 0%, 0%, 0.17),
+18px 30px 25px 2px hsla(0, 0%, 0%, 0.18),
+20px 50px 40px 2px hsla(0, 0%, 0%, 0.22);
 
 $form-outline: none !important;
 
 $button-Padding: 1rem 3rem;
-$button-Padding-Small: 0.25em, 0.75rem;
+$button-Padding-Small: 0.25rem, 0.75rem;
 
-$vertical-mobile-center: 3.5rem 0;
+$border-Radius: 0.5rem;
